--- a/places.html
+++ b/places.html
@@ -38,7 +38,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="places.html">
           <img src="nedyshka.png" alt="logo" width="150" />
         </a>
         <button
