--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="places.html">Мои фото</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="My family.html"> Моя Семья</a>
+            </li>
            
           </ul>
         </div>
@@ -57,15 +61,15 @@
       <p class="lead text-muted">
         Привет! Меня зовут Ева. На этой веб страничке вы можете посмотреть мои фотографии. 
       </p>
-      <a href="https://www.youtube.com/CodingTutorials" 
+      <a href="https://instagram.com/nedyushka?igshid=MzRlODBiNWFlZA==" 
          target="_blank" 
          class="btn btn-primary">
-         My youtube channel
+         Instagram my Mom
       </a>
-      <a href="https://stashchuk.com"
+      <a href="https://instagram.com/nedyuk"
          target="_blank" 
          class="btn btn-secondary">
-         My website
+         Instagram my Dad
       </a>
     </div>
   </body>
