--- a/My family.html
+++ b/My family.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My favorite Photo</title>
+    <title>My family </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -71,14 +71,13 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card">
-            <img src="mother.jpg" class="card-img-top" alt="My image" />
+            <img src="мама и папа.jpg" class="card-img-top" alt="My Mom and Dad image" />
             <div class="card-body">
               <h5 class="card-title">Мама и Папа</h5>
               <p class="card-text">
-                Мои родители. Эта красотка моя МАМА ) Её зовут Ксения, а ПАПУ
-                зовут Олег. Я их очень сильно люблю !!!
+                Мои родители. Сладкая парочка TWIX
               </p>
-              <a href="mother.jpg" target="_blank" class="btn btn-primary"
+              <a href="мама и папа.jpg" target="_blank" class="btn btn-primary"
                 >Large Photo</a
               >
             </div>
@@ -87,18 +86,18 @@
         <div class="col">
           <div class="card">
             <img
-              src="мой первый день.jpg"
+              src="это я с мамой.jpg"
               class="card-img-top"
               alt="My image"
             />
             <div class="card-body">
-              <h5 class="card-title">Мой Первый День</h5>
+              <h5 class="card-title">Моя Мамуля</h5>
               <p class="card-text">
-                29.08.2022 года. В 20:03 родилась самая сладкая девочка
-                Евочка!!!
+                Это Мы с Мамой поехали по делам 
+                
               </p>
               <a
-                href="мой первый день.jpg"
+                href="это я с мамой.jpg"
                 target="_blank"
                 class="btn btn-primary"
                 >Large Photo</a
@@ -108,17 +107,40 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="зайка.jpg" class="card-img-top" alt="My image" />
+            <img src="это я с папой.jpg" class="card-img-top" alt="My image" />
             <div class="card-body">
-              <h5 class="card-title">Зайка</h5>
+              <h5 class="card-title">Мой Папа</h5>
               <p class="card-text">
-                Это мой наряд на первый мой Новый Год!!! В этот день ко мне
-                приехала бабушка и тётя и вместо Ёлки они нарядили меня ))
+                 Тут у нас тихий час. 
               </p>
-              <a href="зайка.jpg" target="_blank" class="btn btn-primary"
+              <a href="это я с папой.jpg" target="_blank" class="btn btn-primary"
                 >Large Photo</a
               >
             </div>
+            <div class="col">
+                <div class="card">
+                  <img src="это я с папой.jpg" class="card-img-top" alt="My image" />
+                  <div class="card-body">
+                    <h5 class="card-title">Мой Папа</h5>
+                    <p class="card-text">
+                       Тут у нас тихий час. 
+                    </p>
+                    <a href="это я с папой.jpg" target="_blank" class="btn btn-primary"
+                      >Large Photo</a
+                    >
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="это я с папой.jpg" class="card-img-top" alt="My image" />
+                      <div class="card-body">
+                        <h5 class="card-title">Мой Папа</h5>
+                        <p class="card-text">
+                           Тут у нас тихий час. 
+                        </p>
+                        <a href="это я с папой.jpg" target="_blank" class="btn btn-primary"
+                          >Large Photo</a
+                        >
+                      </div>
           </div>
         </div>
       </div>
